--- a/src/app/dashboard/audit-plan/view-plan/view-plan-list/view-plan-list.component.html
+++ b/src/app/dashboard/audit-plan/view-plan/view-plan-list/view-plan-list.component.html
@@ -144,74 +144,81 @@
                   </li>
                 </ul>
               </nav>
-              <div class="table-responsive max_hei_table">
-                <table id="example2" class="table table-bordered table-hover">
-                  <thead>
-                    <tr class="now_rap text-center sticky_header">
-                      <th>Total Point Raised</th>
-                      <th>Closure</th>
-                      <th>Verify</th>
-                      <th>Closed</th>
-                      <th>Partailly Closed</th>
-                      <th>Open</th>
-                      <th>Point Pending from Vendor</th>
-
-
-                      </tr>
-                      </thead>
-                      <tbody class="text-center">
-                        <tr>
-                          <td>10</td>
-                          <td>6</td>
-                          <td>4</td>
-                          <td>2</td>
-                          <td>1</td>
-                          <td>1</td>
-                          <td>5</td>
-                        </tr>
-                        </tbody>
-                      </table>
-                </div>
+              
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-header">
+              </div>
+              <div class="card-body">
                 <div class="table-responsive max_hei_table">
                   <table id="example2" class="table table-bordered table-hover">
                     <thead>
                       <tr class="now_rap text-center sticky_header">
-                        <th> Points </th>
+                        <th>Total Point Raised</th>
                         <th>Closure</th>
-                        <th>Evidence</th>
-                       <th>Status</th>
+                        <th>Verify</th>
+                        <th>Closed</th>
+                        <th>Partailly Closed</th>
+                        <th>Open</th>
+                        <th>Point Pending from Vendor</th>
   
   
                         </tr>
                         </thead>
                         <tbody class="text-center">
                           <tr>
+                            <td>10</td>
+                            <td>6</td>
+                            <td>4</td>
+                            <td>2</td>
                             <td>1</td>
-                            <td>Will make a standard</td>
-                            <td><a href="" data-toggle="tooltip" data-placement="top" title="Click here for download">List of racks</a></td>
-                            <td><button class="btn btn-success">closed</button></td>
-                            
-                          </tr>
-                        
-                          <tr>
                             <td>1</td>
-                            <td>Will make a standard</td>
-                            <td><a href="" data-toggle="tooltip" data-placement="top" title="Click here for download">List of racks</a></td>
-                            <td><button class="btn btn-primary">Partially Closed</button></td>
-                            
-                          </tr>
-                          <tr>
-                            <td>1</td>
-                            <td>Will make a standard</td>
-                            <td><a href="" data-toggle="tooltip" data-placement="top" title="Click here for download">List of racks</a></td>
-                            <td><button class="btn btn-danger">open</button></td>
-                            
+                            <td>5</td>
                           </tr>
                           </tbody>
                         </table>
                   </div>
+                  <div class="table-responsive max_hei_table">
+                    <table id="example2" class="table table-bordered table-hover">
+                      <thead>
+                        <tr class="now_rap text-center sticky_header">
+                          <th> Points </th>
+                          <th>Closure</th>
+                          <th>Evidence</th>
+                         <th>Status</th>
+    
+    
+                          </tr>
+                          </thead>
+                          <tbody class="text-center">
+                            <tr>
+                              <td>1</td>
+                              <td>Will make a standard</td>
+                              <td><a href="" data-toggle="tooltip" data-placement="top" title="Click here for download">List of racks</a></td>
+                              <td><button class="btn btn-success">closed</button></td>
+                              
+                            </tr>
+                          
+                            <tr>
+                              <td>1</td>
+                              <td>Will make a standard</td>
+                              <td><a href="" data-toggle="tooltip" data-placement="top" title="Click here for download">List of racks</a></td>
+                              <td><button class="btn btn-primary">Partially Closed</button></td>
+                              
+                            </tr>
+                            <tr>
+                              <td>1</td>
+                              <td>Will make a standard</td>
+                              <td><a href="" data-toggle="tooltip" data-placement="top" title="Click here for download">List of racks</a></td>
+                              <td><button class="btn btn-danger">open</button></td>
+                              
+                            </tr>
+                            </tbody>
+                          </table>
+                    </div>
+                </div>
             </div>
-          </div>
         </div>
       </div>
     </div>
