--- a/src/app/dashboard/audit-plan/view-plan/view-plan-list/view-plan-list.component.html
+++ b/src/app/dashboard/audit-plan/view-plan/view-plan-list/view-plan-list.component.html
@@ -147,11 +147,11 @@
               
             </div>
           </div>
-          <div class="card">
+          <div class="card"  *ngIf="isClosure2">
             <div class="card-header">
               </div>
               <div class="card-body">
-                <div class="table-responsive max_hei_table" *ngIf="isClosure2">
+                <div class="table-responsive max_hei_table">
                   <table id="example2" class="table table-bordered table-hover">
                     <thead>
                       <tr class="now_rap text-center sticky_header">
@@ -177,46 +177,54 @@
                           </tbody>
                         </table>
                   </div>
-                  <div class="table-responsive max_hei_table"  *ngIf="isClosure3">
-                    <table id="example2" class="table table-bordered table-hover">
-                      <thead>
-                        <tr class="now_rap text-center sticky_header">
-                          <th> Points </th>
-                          <th>Closure</th>
-                          <th>Evidence</th>
-                         <th>Status</th>
-    
-    
-                          </tr>
-                          </thead>
-                          <tbody class="text-center">
-                            <tr>
-                              <td>1</td>
-                              <td>Will make a standard</td>
-                              <td><a href="" data-toggle="tooltip" data-placement="top" title="Click here for download">List of racks</a></td>
-                              <td><button class="btn btn-success">closed</button></td>
-                              
-                            </tr>
-                          
-                            <tr>
-                              <td>1</td>
-                              <td>Will make a standard</td>
-                              <td><a href="" data-toggle="tooltip" data-placement="top" title="Click here for download">List of racks</a></td>
-                              <td><button class="btn btn-primary">Partially Closed</button></td>
-                              
-                            </tr>
-                            <tr>
-                              <td>1</td>
-                              <td>Will make a standard</td>
-                              <td><a href="" data-toggle="tooltip" data-placement="top" title="Click here for download">List of racks</a></td>
-                              <td><button class="btn btn-danger">open</button></td>
-                              
-                            </tr>
-                            </tbody>
-                          </table>
-                    </div>
+                  
                 </div>
             </div>
+            <div class="card"  *ngIf="isClosure3">
+              <div class="card-header">
+                </div>
+                <div class="card-body">
+                 
+                    <div class="table-responsive max_hei_table"  >
+                      <table id="example2" class="table table-bordered table-hover">
+                        <thead>
+                          <tr class="now_rap text-center sticky_header">
+                            <th> Points </th>
+                            <th>Closure</th>
+                            <th>Evidence</th>
+                           <th>Status</th>
+      
+      
+                            </tr>
+                            </thead>
+                            <tbody class="text-center">
+                              <tr>
+                                <td>1</td>
+                                <td>Will make a standard</td>
+                                <td><a href="" data-toggle="tooltip" data-placement="top" title="Click here for download">List of racks</a></td>
+                                <td><button class="btn btn-success">closed</button></td>
+                                
+                              </tr>
+                            
+                              <tr>
+                                <td>1</td>
+                                <td>Will make a standard</td>
+                                <td><a href="" data-toggle="tooltip" data-placement="top" title="Click here for download">List of racks</a></td>
+                                <td><button class="btn btn-primary">Partially Closed</button></td>
+                                
+                              </tr>
+                              <tr>
+                                <td>1</td>
+                                <td>Will make a standard</td>
+                                <td><a href="" data-toggle="tooltip" data-placement="top" title="Click here for download">List of racks</a></td>
+                                <td><button class="btn btn-danger">open</button></td>
+                                
+                              </tr>
+                              </tbody>
+                            </table>
+                      </div>
+                  </div>
+              </div>
         </div>
       </div>
     </div>
