--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -35,7 +35,7 @@ ng-if="stopSpinner==true">
        </div><!--inpiu-->
        <div class="btn_div">
 
-         <a (click)="login()" class="btn btn-blue">Log In</a>
+         <button type="submit" (click)="login()" class="btn btn-blue">Log In</button>
        </div>
       </form>
      </div><!--title-->
