--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,5 @@
+@import "../node_modules/ngx-spinner/animations/line-scale-pulse-out.css";
+
 .nav_bar_space {
   display: flex !important;
   justify-content: space-between !important;
