--- a/src/app/dashboard/manage-audit/manage-audit-initiate/manage-audit-initiate.component.html
+++ b/src/app/dashboard/manage-audit/manage-audit-initiate/manage-audit-initiate.component.html
@@ -21,6 +21,14 @@
                             </div>
                             <div class="col-sm-4">
                                 <div class="form-group">
+                                    <label class="form_label">Vendor Code</label>
+                                    <select class="form-control" formControlName="vendorId">
+                                        <option> NPH1234</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <div class="col-sm-4">
+                                <div class="form-group">
                                     <label class="form_label">Start Date</label>
                                     <input type="date" class="form-control inputbox_css" formControlName="startDate"
                                         >
@@ -63,6 +71,12 @@
                                     <label class="form_label">Actual End Date</label>
                                     <input type="date" class="form-control inputbox_css" 
                                     formControlName="actualEndDate">
+                                </div>
+                            </div>
+                            <div class="col-sm-4">
+                                <div class="form-group">
+                                    <label class="form_label">Any Other location </label>
+                                    <input type="text" class="form-control" placeholder="Enter other location">
                                 </div>
                             </div>
                             <!-- <div class="col-sm-4">
