--- a/src/app/dashboard/masters/categories/categories-edit/categories-edit.component.html
+++ b/src/app/dashboard/masters/categories/categories-edit/categories-edit.component.html
@@ -25,6 +25,16 @@
                                  maxlength="200">
                         </div>
                       </div> -->
+                      <div class="col-sm-4">
+                        <div class="form-group">
+                          <label class="form_label">Status</label>
+                          <select class="form-control inputbox_css">
+                          <option>Active</option>
+                          <option>In Active</option>
+                          
+                          </select>
+                          </div>
+                        </div><!--colend-->
                     </div>
                     <div class="d-flex">
                     <input type="checkbox">
