--- a/src/styles.css
+++ b/src/styles.css
@@ -11,8 +11,14 @@
 .fon_17{
     font-size:17px;
 }
+.mt_22{
+  margin-top: 22px;
+}
 .fon_13 {
   font-size: 13px;
+}
+.fon_20{
+  font-size: 20px;
 }
 .counter_digit {
   font-size: 32px;
