--- a/src/app/dashboard/audit-plan/view-plan/view-plan-list/view-plan-list.component.html
+++ b/src/app/dashboard/audit-plan/view-plan/view-plan-list/view-plan-list.component.html
@@ -98,12 +98,19 @@
                       <th>Any Other Location</th>
                       <th>Planned Start Date </th>
                       <th>Planned End Date</th>
-                     
-                      <th>Status </th>
-                      <th>Pending Action Plan</th>
-                      <th>% Closure</th>
-
+                      <th>Report release date</th>
+                      <th>Category</th>
+                      <th>Report</th>
+                      <th>Status Pending at</th>
                       <th *ngIf="isSuperAdmin || isPlanner">Action </th>
+                      <th *ngIf="isSuperAdmin || isPlanner">Add Auditor</th>
+                      <th >Status </th>
+                     
+                      <th>Pending Action Plan</th>
+                     
+
+                     
+                      <th >Evidences Recieved</th>
                     </tr>
                   </thead>
                   <tbody>
@@ -114,15 +121,20 @@
                       <td>{{item.otherLocation}}</td>
                       <td>{{item.plannedStartDate | date:dateFormate}}</td>
                       <td>{{item.plannedEndDate | date:dateFormate}}</td>
+                      <td>12-2-2022</td>
+                      <td><p class="btn btn-success"></p></td>
+                      <td>Provisional</td>
+                      <td>Admin</td>
                     
                       
                       <td *ngIf="isSuperAdmin || isPlanner">
-                        <a (click)="viewPlan(item)"><img src="../../../../assets/icon/view.png" class="viwe_iamge"></a>
-                        <a *ngIf="isSuperAdmin" (click)="assign(item)" data-toggle="tooltip" data-placement="top" title="Add Auditor"><img src="../../../../assets/icons/audit.png" class="viwe_iamge"></a>
+                        <a (click)="viewPlan(item)" data-toggle="tooltip" data-placement="top" title="Tooltip on top"><img src="../../../../assets/icon/view.png" class="viwe_iamge"></a>
+                     
                       </td>
-                      <td><p [ngClass]="item.status">{{item.status}} </p></td>
-                      <td><button class="btn btn-primary" (click)="pendingAction()">To be Received</button></td>
-                      <td (click)="closure1()">20%</td>
+                      <td *ngIf="isSuperAdmin || isPlanner">   <a *ngIf="isSuperAdmin" (click)="assign(item)" data-toggle="tooltip" data-placement="top" title="Add Auditor"><img src="../../../../assets/icons/audit.png" class="viwe_iamge"></a></td>
+                      <td><p [ngClass]="item.status" data-toggle="tooltip" data-placement="top" title="Tooltip on top">{{item.status}} </p></td>
+                      <td><button class="btn btn-primary" (click)="pendingAction()" data-toggle="tooltip" data-placement="top" title="Tooltip on top" >To be Received</button></td>
+                      <td (click)="closure1()" data-toggle="tooltip" data-placement="top" title="Tooltip on top">20%</td>
                     </tr>
                   </tbody>
                 </table>
