--- a/src/app/dashboard/manage-audit/manage-audit-view/manage-audit-view.component.html
+++ b/src/app/dashboard/manage-audit/manage-audit-view/manage-audit-view.component.html
@@ -36,17 +36,17 @@
                                     </select>
                                 </div>
                             </div>
-                            <div class="col-sm-3">
-                                <div class="form-group">
-                                    <label class="form_label">Any Other location <span
-                                            class="start_css">*</span></label>
-                                    <input type="text" class="form-control" placeholder="XXXXXXXX" disabled>
-                                </div>
-                            </div>
+                           
                             <div class="col-sm-3">
                                 <div class="form-group">
                                     <label class="form_label">Any Other Code <span class="start_css">*</span></label>
                                     <input type="text" class="form-control" placeholder="XXXXXX" disabled>
+                                </div>
+                            </div>
+                            <div class="col-sm-3">
+                                <div class="form-group">
+                                    <label class="form_label">Any Other Location </label>
+                                    <input type="text" class="form-control" placeholder="Enter Other Location" disabled>
                                 </div>
                             </div>
                             <div class="col-sm-3">
