--- a/src/app/dashboard/evidence/evidence-submission/evidence-submission.component.html
+++ b/src/app/dashboard/evidence/evidence-submission/evidence-submission.component.html
@@ -1,4 +1,4 @@
-<div class="card">
+<div class="card" *ngIf="screen1">
     <div class="card-header">
         <div class="header_card">
             <h3 class="card-title">Audit Area Details</h3>
@@ -27,7 +27,7 @@
                         <td>Regulation for 
                             initial production control</td>
                         <td>
-                            <button  class="btn btn-primary">2</button>
+                            <button  class="btn btn-primary" (click)="evisubmmi()">2</button>
                         </td>
                         
                     </tr>
@@ -129,7 +129,7 @@
         </div>
 
 
-        <div class="card">
+        <div class="card" *ngIf="screen2">
             <div class="card-header">
                 <div class="header_card">
                     <h3 class="card-title">Regulation for initial production control </h3>
@@ -207,6 +207,9 @@
                     </ul>
                 </nav>
             </div>
+            <div class="card-footer">
+                <button class="btn btn-default" (click)="back()">Close</button>
+                </div>
             <!-- <div class="card-footer">
                 <button class="btn btn-success">Submit</button>
                 </div> -->
