--- a/src/app/shared/component/sidebar/sidebar.component.html
+++ b/src/app/shared/component/sidebar/sidebar.component.html
@@ -90,7 +90,7 @@
                 <a routerLink="/dashboard/view-plan" class="nav-link">
                   <img src="../../assets/icons/view.png" class="side_img">
                   <p>
-                    View Plan
+                    Manage Audit
                   </p>
                 </a>
               </li>
@@ -132,7 +132,7 @@
             <a routerLink="/dashboard/manage-audit" class="nav-link">
               <img src="../../assets/icons/management.png" class="side_img">
               <p>
-                Manage Audit
+                Audit Execution
               </p>
             </a>
             
