--- a/src/app/dashboard/audit-plan/pending-action-plan/pending-action-plan.component.html
+++ b/src/app/dashboard/audit-plan/pending-action-plan/pending-action-plan.component.html
@@ -7,9 +7,6 @@
     </div>
     <div class="card-body">
        
-           <div>
-           
-            </div>
         <div class="table-responsive max_hei_table" >
             <table id="" class="table table-bordered table-hover">
                 <thead>
@@ -64,7 +61,8 @@
                 </tbody>
             </table>
         </div>
-        
+     
+    
         <nav aria-label="Page navigation example">
             <ul class="pagination justift_end">
                 <li class="page-item">
@@ -83,4 +81,7 @@
             </ul>
         </nav>
     </div>
+    <div class="card-footer">
+        <button class="btn btn-default" (click)="closeobser()">Close</button>
+        </div>
 </div>
