--- a/src/app/dashboard/audit-plan/view-plan/view-plan-list/view-plan-list.component.html
+++ b/src/app/dashboard/audit-plan/view-plan/view-plan-list/view-plan-list.component.html
@@ -158,6 +158,7 @@
               </nav>
               
             </div>
+            
           </div>
           <div class="card"  *ngIf="isClosure2">
             <div class="card-header">
@@ -191,6 +192,10 @@
                   </div>
                   
                 </div>
+                <div class="card-footer">
+                  <button class="btn btn-default" (click)="back()">Close</button>
+                </div>
+           
             </div>
             <div class="card"  *ngIf="isClosure3">
               <div class="card-header">
@@ -235,6 +240,9 @@
                               </tbody>
                             </table>
                       </div>
+                  </div>
+                  <div class="card-footer">
+                    <button class="btn btn-default" (click)="backevi()">Close</button>
                   </div>
               </div>
         </div>
