cimmit new designd chnges

--- a/src/app/dashboard/action-plan/action-plan.component.html
+++ b/src/app/dashboard/action-plan/action-plan.component.html
@@ -37,7 +37,7 @@
                                             <th>Categories</th>
                                             <th>Score</th>
                                             <th>Action Plan </th>
-                                            <th>Evidences Recieved</th>
+                                            <th data-toggle="tooltip" data-placement="top" title="Evidences Recieved">Closure Status</th>
                                             
                                         </tr>
                                     </thead>
