--- a/src/app/dashboard/manage-audit/manage-audit-initiate/manage-audit-initiate.component.html
+++ b/src/app/dashboard/manage-audit/manage-audit-initiate/manage-audit-initiate.component.html
@@ -79,6 +79,12 @@
                                     <input type="text" class="form-control" placeholder="Enter other location">
                                 </div>
                             </div>
+                            <div class="col-sm-4">
+                                <div class="form-group">
+                                    <label class="form_label">Part Number </label>
+                                    <input type="text" class="form-control" placeholder="Enter other location">
+                                </div>
+                            </div>
                             <!-- <div class="col-sm-4">
                                 <div class="form-group">
                                     <label class="mb-0">Auditor</label>
