--- a/src/app/shared/component/sidebar/sidebar.component.html
+++ b/src/app/shared/component/sidebar/sidebar.component.html
@@ -128,7 +128,7 @@
               </li> -->
             </ul>
           </li>
-          <li class="nav-item">
+          <li class="nav-item" *ngIf="!isVendor">
             <a routerLink="/dashboard/manage-audit" class="nav-link">
               <img src="../../assets/icons/management.png" class="side_img">
               <p>
