--- a/src/styles.css
+++ b/src/styles.css
@@ -11,6 +11,13 @@
 .fon_17{
     font-size:17px;
 }
+.filter_label{
+  margin-bottom: 0px;
+    font-size: 11px;
+}
+.mt_24{
+  margin-top: 24px;
+}
 .mt_22{
   margin-top: 22px;
 }
