--- a/src/app/dashboard/evidence/evidence-received/evidence-received.component.html
+++ b/src/app/dashboard/evidence/evidence-received/evidence-received.component.html
@@ -2,7 +2,18 @@
     <div class="card-header">
         <div class="header_card">
             <h3 class="card-title">Regulation for initial production control </h3>
-            
+            <div class="form-group mb-0 w_26">
+               
+                <select class="form-control filter_css">
+                    <option > Select Vendor Name</option>
+                    <option >  Vendor1</option>
+                    <option >  Vendor1</option>
+                    <option >  Vendor1</option>
+                    <option >  Vendor1</option> 
+                    <option >  Vendor1</option> 
+                    <option >  Vendor1</option>
+                </select>
+            </div>
         </div>
     </div>
     <div class="card-body">
