--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,4 +1,6 @@
-<div class="container-fluid pt-2">
+
+
+.<div class="container-fluid pt-2">
 
     <div class="row">
       <div class="col-12">
@@ -12,6 +14,78 @@
           <!-- /.card-header -->
           <div class="card-body">
            
+<div class="d-flex justify-content-center mb-2 flex_direction_media">
+  <a href="" class="child_counter gradien_plan">
+    <div class="">
+      <div class="d-flex justify-content-between align-items-center">
+        <img src="../../../../assets/icons/counter/shield.png" class="counter_img">
+        <p class="color_white mb-0 fon_13">Total Plan</p>
+      </div>
+      <div>
+        <p class="counter_digit">8</p>
+        <a href=""></a>
+      </div>
+    </div>
+  </a>
+  <a href="" class="child_counter gradien_approve">
+    <div class="">
+      <div class="d-flex justify-content-between align-items-center">
+        <img src="../../../../assets/icons/counter/approve.png" class="counter_img">
+        <p class="color_white mb-0 fon_13">Approve Task</p>
+      </div>
+      <div>
+        <p class="counter_digit">6</p>
+        <a href=""></a>
+      </div>
+    </div>
+  </a>
+  <a href="" class="child_counter gradien_pending">
+    <div class="">
+      <div class="d-flex justify-content-between align-items-center">
+        <img src="../../../../assets/icons/counter/pending.png" class="counter_img">
+        <p class="color_white mb-0 fon_13">Pending Plan</p>
+      </div>
+      <div>
+        <p class="counter_digit">6</p>
+        <a href=""></a>
+      </div>
+    </div>
+  </a>
+  <a href="" class="child_counter gradien_auditor_assign">
+    <div class="">
+      <div class="d-flex justify-content-between align-items-center">
+        <img src="../../../../assets/icons/counter/auditor.png" class="counter_img">
+        <p class="color_white mb-0 fon_13">Auditor Assign</p>
+      </div>
+      <div>
+        <p class="counter_digit">6</p>
+        <a href=""></a>
+      </div>
+    </div>
+  </a>
+</div>
+<div class="row">
+  <div class="col-sm-6">
+    <div class="card">
+      <div class="card-header border-0">
+        <div class="d-flex justify-content-between">
+          <h3 class="card-title">Sales</h3>
+          <a href="javascript:void(0);">View Report</a>
+        </div>
+      </div>
+      <div class="card-body">
+      
+      </div>
+    </div>
+    <!-- /.card -->
+</div>
+  </div>
+
+  <div class="row">
+    <div class="col-sm-12">
+      </div>
+    </div><!--row-->
+
           </div>
           <!-- /.card-body -->
         </div>
