--- a/src/app/dashboard/evidence/evidence-received/evidence-received.component.html
+++ b/src/app/dashboard/evidence/evidence-received/evidence-received.component.html
@@ -48,8 +48,9 @@
                         <td><textarea class="form-control">Prefield Data</textarea></td>
                         <td><textarea class="form-control">Prefield Data</textarea></td>
                         <td><a href=""><span class="mr-1">Test Link,</span><span>TestLink</span></a></td>
-                        <td><button class="btn btn-success mr-1">Accept</button>
-                            <button class="btn btn-danger">Reject</button></td>
+                        <td><button class="btn btn-success mr-1" data-toggle="modal" data-target="#exampleModal">Open</button>
+                            <button class="btn btn-danger mr-1">Close</button>
+                            <button class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Partially Close</button></td>
                         <!-- <td><textarea class="form-control"></textarea></td> -->
                         
                     </tr>
@@ -62,8 +63,9 @@
                         <td><textarea class="form-control">Prefield Data</textarea></td>
                         <td><textarea class="form-control">Prefield Data</textarea></td>
                         <td><a href=""><span class="mr-1">Test Link,</span><span>TestLink</span></a></td>
-                        <td><button class="btn btn-success mr-1">Accept</button>
-                            <button class="btn btn-danger">Reject</button></td>
+                        <td><button class="btn btn-success mr-1" data-toggle="modal" data-target="#exampleModal">Open</button>
+                            <button class="btn btn-danger mr-1">Close</button>
+                            <button class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">Partially Close</button></td>
                         <!-- <td><textarea class="form-control"></textarea></td> -->
                         
                     </tr>
@@ -89,7 +91,32 @@
             </ul>
         </nav>
     </div>
+
+    <div class="card-footer">
+        <button class="btn btn-success">Submit</button>
+        </div>
     <!-- <div class="card-footer">
         <button class="btn btn-success">Submit</button>
         </div> -->
 </div>
+
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+         
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+            <label>Remarks</label>
+            <textarea class="form-control" rows="3" placeholder="Enter ..."></textarea>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+          <button type="button" class="btn btn-primary">Save changes</button>
+        </div>
+      </div>
+    </div>
+  </div>
